# mcp-playground

./: .gitignore  README.md  pyproject.toml
mcp-intro/: main.py  mcp_server.py
mcp-intro/core/: base.py  chat.py  claude_service.py  cli_chat.py  gemini_service.py  llm_provider.py  ollama_service.py  openai_service.py  tools.py
